// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Splitter Nested 1`] = `
<div>
  <div
    class="p-splitter p-component p-splitter-horizontal"
    data-p-splitter-resizing="false"
    data-pc-name="splitter"
    data-pc-section="root"
    style="height: 300px;"
  >
    <div
      class="flex align-items-center justify-content-center p-splitter-panel"
      data-p-splitter-panel-nested="false"
      data-pc-section="splitterpanel.root"
      id="pr_id_5_0"
      role="presentation"
      style="flex-basis: calc(20% - 4px);"
    >
      Panel 1
    </div>
    <div
      class="p-splitter-gutter"
      data-p-splitter-gutter-resizing="false"
      data-pc-section="gutter"
      role="separator"
      style="width: 4px;"
    >
      <div
        aria-controls="pr_id_5_0"
        aria-orientation="vertical"
        aria-valuemax="100"
        aria-valuemin="10"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="p-splitter-gutter-handle"
        data-pc-section="gutterhandler"
        tabindex="0"
      />
    </div>
    <div
      class="p-splitter-panel p-splitter-panel-nested"
      data-p-splitter-panel-nested="true"
      data-pc-section="splitterpanel.root"
      id="pr_id_5_1"
      role="presentation"
      style="flex-basis: calc(80% - 4px);"
    >
      <div
        class="p-splitter p-component p-splitter-vertical"
        data-p-splitter-resizing="false"
        data-pc-name="splitter"
        data-pc-section="root"
      >
        <div
          class="flex align-items-center justify-content-center p-splitter-panel"
          data-p-splitter-panel-nested="false"
          data-pc-section="splitterpanel.root"
          id="pr_id_4_0"
          role="presentation"
          style="flex-basis: calc(15% - 4px);"
        >
          Panel 2
        </div>
        <div
          class="p-splitter-gutter"
          data-p-splitter-gutter-resizing="false"
          data-pc-section="gutter"
          role="separator"
          style="height: 4px;"
        >
          <div
            aria-controls="pr_id_4_0"
            aria-orientation="horizontal"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="15"
            aria-valuetext="15%"
            class="p-splitter-gutter-handle"
            data-pc-section="gutterhandler"
            tabindex="0"
          />
        </div>
        <div
          class="p-splitter-panel p-splitter-panel-nested"
          data-p-splitter-panel-nested="true"
          data-pc-section="splitterpanel.root"
          id="pr_id_4_1"
          role="presentation"
          style="flex-basis: calc(85% - 4px);"
        >
          <div
            class="p-splitter p-component p-splitter-horizontal"
            data-p-splitter-resizing="false"
            data-pc-name="splitter"
            data-pc-section="root"
          >
            <div
              class="flex align-items-center justify-content-center p-splitter-panel"
              data-p-splitter-panel-nested="false"
              data-pc-section="splitterpanel.root"
              id="pr_id_3_0"
              role="presentation"
              style="flex-basis: calc(20% - 4px);"
            >
              Panel 3
            </div>
            <div
              class="p-splitter-gutter"
              data-p-splitter-gutter-resizing="false"
              data-pc-section="gutter"
              role="separator"
              style="width: 4px;"
            >
              <div
                aria-controls="pr_id_3_0"
                aria-orientation="vertical"
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="20"
                aria-valuetext="20%"
                class="p-splitter-gutter-handle"
                data-pc-section="gutterhandler"
                tabindex="0"
              />
            </div>
            <div
              class="flex align-items-center justify-content-center p-splitter-panel"
              data-p-splitter-panel-nested="false"
              data-pc-section="splitterpanel.root"
              id="pr_id_3_1"
              role="presentation"
              style="flex-basis: calc(80% - 4px);"
            >
              Panel 4
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Splitter Single Panel with size 1`] = `
<div>
  <div
    class="p-splitter p-component p-splitter-vertical"
    data-p-splitter-resizing="false"
    data-pc-name="splitter"
    data-pc-section="root"
    style="height: 300px;"
  >
    <div
      class="p-splitter-panel"
      data-p-splitter-panel-nested="false"
      data-pc-section="splitterpanel.root"
      id="pr_id_6_0"
      role="presentation"
      style="flex-basis: calc(5% - 0px);"
    >
      Panel 1
    </div>
    <div
      class="p-splitter-gutter"
      data-p-splitter-gutter-resizing="false"
      data-pc-section="gutter"
      role="separator"
      style="height: 4px;"
    >
      <div
        aria-controls="pr_id_6_0"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="5"
        aria-valuetext="5%"
        class="p-splitter-gutter-handle"
        data-pc-section="gutterhandler"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`Splitter Single Panel without size 1`] = `
<div>
  <div
    class="p-splitter p-component p-splitter-vertical"
    data-p-splitter-resizing="false"
    data-pc-name="splitter"
    data-pc-section="root"
    style="height: 300px;"
  >
    <div
      class="p-splitter-panel"
      data-p-splitter-panel-nested="false"
      data-pc-section="splitterpanel.root"
      id="pr_id_7_0"
      role="presentation"
      style="flex-basis: calc(100% - 0px);"
    >
      Panel 1
    </div>
    <div
      class="p-splitter-gutter"
      data-p-splitter-gutter-resizing="false"
      data-pc-section="gutter"
      role="separator"
      style="height: 4px;"
    >
      <div
        aria-controls="pr_id_7_0"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        aria-valuetext="100%"
        class="p-splitter-gutter-handle"
        data-pc-section="gutterhandler"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`Splitter Splitter requires two SplitterPanel components to wrap. 1`] = `
<div>
  <div
    class="mb-5 p-splitter p-component p-splitter-horizontal"
    data-p-splitter-resizing="false"
    data-pc-name="splitter"
    data-pc-section="root"
    style="height: 300px;"
  >
    <div
      class="flex align-items-center justify-content-center p-splitter-panel"
      data-p-splitter-panel-nested="false"
      data-pc-section="splitterpanel.root"
      id="pr_id_1_0"
      role="presentation"
      style="flex-basis: calc(50% - 4px);"
    >
      Panel 1
    </div>
    <div
      class="p-splitter-gutter"
      data-p-splitter-gutter-resizing="false"
      data-pc-section="gutter"
      role="separator"
      style="width: 4px;"
    >
      <div
        aria-controls="pr_id_1_0"
        aria-orientation="vertical"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        aria-valuetext="50%"
        class="p-splitter-gutter-handle"
        data-pc-section="gutterhandler"
        tabindex="0"
      />
    </div>
    <div
      class="flex align-items-center justify-content-center p-splitter-panel"
      data-p-splitter-panel-nested="false"
      data-pc-section="splitterpanel.root"
      id="pr_id_1_1"
      role="presentation"
      style="flex-basis: calc(50% - 4px);"
    >
      Panel 2
    </div>
  </div>
</div>
`;

exports[`Splitter Vertical layout 1`] = `
<div>
  <div
    class="p-splitter p-component p-splitter-vertical"
    data-p-splitter-resizing="false"
    data-pc-name="splitter"
    data-pc-section="root"
    style="height: 300px;"
  >
    <div
      class="p-splitter-panel"
      data-p-splitter-panel-nested="false"
      data-pc-section="splitterpanel.root"
      id="pr_id_2_0"
      role="presentation"
      style="flex-basis: calc(50% - 4px);"
    >
      Panel 1
    </div>
    <div
      class="p-splitter-gutter"
      data-p-splitter-gutter-resizing="false"
      data-pc-section="gutter"
      role="separator"
      style="height: 4px;"
    >
      <div
        aria-controls="pr_id_2_0"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        aria-valuetext="50%"
        class="p-splitter-gutter-handle"
        data-pc-section="gutterhandler"
        tabindex="0"
      />
    </div>
    <div
      class="p-splitter-panel"
      data-p-splitter-panel-nested="false"
      data-pc-section="splitterpanel.root"
      id="pr_id_2_1"
      role="presentation"
      style="flex-basis: calc(50% - 4px);"
    >
      Panel 2
    </div>
  </div>
</div>
`;

exports[`Splitter Without panels 1`] = `
<div>
  <div
    class="p-splitter p-component p-splitter-vertical"
    data-p-splitter-resizing="false"
    data-pc-name="splitter"
    data-pc-section="root"
    style="height: 300px;"
  />
</div>
`;
